fixed lecciones 14 and 15 + adjusted spacing

--- a/css/curso.css
+++ b/css/curso.css
@@ -94,7 +94,6 @@
 .container {
     display: flex;
     width: 100%;
-    margin-top: 7rem;
 }
 
 
@@ -135,7 +134,7 @@
 /* Contenido principal */
 .content {
     width: 80%;
-    padding: 8rem;
+    padding: 2rem;
     overflow-y: auto;
     margin-left: 2.5%;
     margin-right: 2.5%;
@@ -237,11 +236,7 @@
     background-color: #999;
 }
 
-.content {
-    padding: 0 20px;      
-    max-width: 1200px;    
-    margin: 0 auto;       
-}
+
   /* Footer */
 
   .footer {
@@ -300,4 +295,12 @@
 .iframe-container iframe {
     width: 100%; /* Make the iframe take the full width of its container */
     max-width: 100%;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24
 }
